Update: Add contact email

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -63,6 +63,6 @@
     <p>Мы можем обновлять эту политику конфиденциальности. При существенных изменениях мы уведомим вас через приложение.</p>
 
     <h2>8. Контакты</h2>
-    <p>По вопросам конфиденциальности обращайтесь: [Ваш email]</p>
+    <p>По вопросам конфиденциальности обращайтесь: aething@gmail.com</p>
 </body>
 </html> 
