Update: Translate privacy policy to English and update contact info

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Политика конфиденциальности - AI Store</title>
+    <title>Privacy Policy - AI Store by Aething</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,51 +18,51 @@
     </style>
 </head>
 <body>
-    <h1>Политика конфиденциальности</h1>
-    <p>Последнее обновление: 8 апреля 2024 г.</p>
+    <h1>Privacy Policy</h1>
+    <p>Last updated: April 8, 2024</p>
 
-    <h2>1. Введение</h2>
-    <p>AI Store ("мы", "наш" или "приложение") уважает вашу конфиденциальность. Эта политика конфиденциальности объясняет, как мы собираем, используем и защищаем вашу информацию при использовании нашего мобильного приложения.</p>
+    <h2>1. Introduction</h2>
+    <p>AI Store by Aething ("we," "our," or "the app") respects your privacy. This privacy policy explains how we collect, use, and protect your information when you use our mobile application.</p>
 
-    <h2>2. Собираемая информация</h2>
-    <p>Мы собираем минимальный объем информации, необходимый для работы приложения:</p>
+    <h2>2. Information We Collect</h2>
+    <p>We collect minimal information necessary for the app's operation:</p>
     <ul>
-        <li>Информация об устройстве (модель, версия Android)</li>
-        <li>Данные о использовании приложения (для улучшения работы)</li>
-        <li>Технические данные (логи, информация о сбоях)</li>
+        <li>Device information (model, Android version)</li>
+        <li>App usage data (for improvement)</li>
+        <li>Technical data (logs, crash information)</li>
     </ul>
 
-    <h2>3. Использование информации</h2>
-    <p>Мы используем собранную информацию для:</p>
+    <h2>3. How We Use Your Information</h2>
+    <p>We use the collected information to:</p>
     <ul>
-        <li>Улучшения работы приложения</li>
-        <li>Исправления ошибок и сбоев</li>
-        <li>Анализа использования приложения</li>
+        <li>Improve app performance</li>
+        <li>Fix bugs and crashes</li>
+        <li>Analyze app usage</li>
     </ul>
 
-    <h2>4. Хранение данных</h2>
-    <p>Данные хранятся на защищенных серверах. Мы принимаем разумные меры для защиты вашей информации от несанкционированного доступа.</p>
+    <h2>4. Data Storage</h2>
+    <p>Data is stored on secure servers. We take reasonable measures to protect your information from unauthorized access.</p>
 
-    <h2>5. Передача данных третьим лицам</h2>
-    <p>Мы не продаем и не передаем ваши данные третьим лицам, за исключением случаев, когда это необходимо для:</p>
+    <h2>5. Sharing Data with Third Parties</h2>
+    <p>We do not sell or share your data with third parties, except when necessary for:</p>
     <ul>
-        <li>Выполнения требований закона</li>
-        <li>Защиты наших прав</li>
-        <li>Предотвращения мошенничества</li>
+        <li>Legal compliance</li>
+        <li>Protecting our rights</li>
+        <li>Preventing fraud</li>
     </ul>
 
-    <h2>6. Ваши права</h2>
-    <p>Вы имеете право:</p>
+    <h2>6. Your Rights</h2>
+    <p>You have the right to:</p>
     <ul>
-        <li>Получить доступ к своим данным</li>
-        <li>Запросить удаление данных</li>
-        <li>Отказаться от сбора данных</li>
+        <li>Access your data</li>
+        <li>Request data deletion</li>
+        <li>Opt-out of data collection</li>
     </ul>
 
-    <h2>7. Изменения в политике</h2>
-    <p>Мы можем обновлять эту политику конфиденциальности. При существенных изменениях мы уведомим вас через приложение.</p>
+    <h2>7. Policy Changes</h2>
+    <p>We may update this privacy policy. For significant changes, we will notify you through the app.</p>
 
-    <h2>8. Контакты</h2>
-    <p>По вопросам конфиденциальности обращайтесь: aething@gmail.com</p>
+    <h2>8. Contact Us</h2>
+    <p>For privacy-related inquiries, please contact: support@aething.com</p>
 </body>
 </html> 
